--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#community">Community</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#" id="signup-btn">Sign Up</a></li>
             </ul>
             <div class="search-bar">
                 <input type="text" placeholder="Search videos or posts...">
@@ -89,6 +90,25 @@
             <div class="modal-content">
                 <span class="close-modal">×</span>
                 <img id="modal-video" src="" alt="Video Player">
+            </div>
+        </div>
+
+        <!-- Sign Up Modal -->
+        <div id="signup-modal" class="modal">
+            <div class="modal-content">
+                <span class="close-signup">×</span>
+                <h2 class="glitch">Sign Up for Rynix_AI</h2>
+                <form id="signup-form">
+                    <input type="text" id="username" placeholder="Username" required>
+                    <input type="email" id="email" placeholder="Email" required>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <label>
+                        <input type="checkbox" id="age-check" required>
+                        I am 18 or older
+                    </label>
+                    <button type="submit">Join the Neon Revolution</button>
+                </form>
+                <p id="signup-message" style="display: none;"></p>
             </div>
         </div>
     </div>
@@ -294,14 +314,14 @@
             transform: translateY(0);
         }
 
-        h1 {
+        h1, h2.glitch {
             font-size: 2.5rem;
             color: #ff1493;
             text-shadow: 0 0 10px #ff1493;
             margin-bottom: 20px;
         }
 
-        h1:hover {
+        h1:hover, h2.glitch:hover {
             animation: glitch 0.3s linear infinite;
         }
 
@@ -383,6 +403,7 @@
             border: 2px solid #00ffff;
             max-width: 80%;
             position: relative;
+            text-align: center;
         }
 
         .modal-content img {
@@ -390,13 +411,61 @@
             max-width: 600px;
         }
 
-        .close-modal {
+        .close-modal, .close-signup {
             position: absolute;
             top: -15px;
             right: -15px;
             font-size: 1.5rem;
             color: #00ffff;
             cursor: pointer;
+        }
+
+        #signup-form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            max-width: 300px;
+            margin: 0 auto;
+        }
+
+        #signup-form input {
+            padding: 10px;
+            border: 2px solid #ff1493;
+            border-radius: 5px;
+            background: #222;
+            color: #fff;
+            outline: none;
+            transition: border-color 0.3s ease;
+        }
+
+        #signup-form input:focus {
+            border-color: #00ffff;
+            box-shadow: 0 0 10px #00ffff;
+        }
+
+        #signup-form label {
+            color: #fff;
+            font-size: 1rem;
+        }
+
+        #signup-form button {
+            padding: 10px;
+            border: 2px solid #00ffff;
+            border-radius: 5px;
+            background: #ff1493;
+            color: #fff;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        #signup-form button:hover {
+            background: #00ffff;
+            color: #333;
+        }
+
+        #signup-message {
+            color: #00ffff;
+            margin-top: 10px;
         }
 
         @media (max-width: 768px) {
@@ -417,6 +486,14 @@
             #devil-face {
                 width: 200px;
                 height: 200px;
+            }
+
+            .modal-content {
+                max-width: 90%;
+            }
+
+            #signup-form {
+                max-width: 100%;
             }
         }
     </style>
@@ -445,8 +522,10 @@
         document.querySelectorAll('.nav-links a').forEach(link => {
             link.addEventListener('click', (e) => {
                 e.preventDefault();
-                const targetId = link.getAttribute('href').substring(1);
-                document.getElementById(targetId).scrollIntoView({ behavior: 'smooth' });
+                if (link.id !== 'signup-btn') {
+                    const targetId = link.getAttribute('href').substring(1);
+                    document.getElementById(targetId).scrollIntoView({ behavior: 'smooth' });
+                }
             });
         });
 
@@ -491,7 +570,7 @@
         sections.forEach(section => observer.observe(section));
 
         // Video Modal
-        const modal = document.getElementById('video-modal');
+        const videoModal = document.getElementById('video-modal');
         const modalVideo = document.getElementById('modal-video');
         const closeModal = document.querySelector('.close-modal');
         const videoCards = document.querySelectorAll('.video-card');
@@ -499,13 +578,56 @@
         videoCards.forEach(card => {
             card.addEventListener('click', () => {
                 modalVideo.src = card.dataset.video;
-                modal.style.display = 'flex';
+                videoModal.style.display = 'flex';
             });
         });
 
         closeModal.addEventListener('click', () => {
-            modal.style.display = 'none';
+            videoModal.style.display = 'none';
             modalVideo.src = '';
+        });
+
+        // Sign Up Modal
+        const signupModal = document.getElementById('signup-modal');
+        const signupBtn = document.getElementById('signup-btn');
+        const closeSignup = document.querySelector('.close-signup');
+        const signupForm = document.getElementById('signup-form');
+        const signupMessage = document.getElementById('signup-message');
+
+        signupBtn.addEventListener('click', (e) => {
+            e.preventDefault();
+            signupModal.style.display = 'flex';
+        });
+
+        closeSignup.addEventListener('click', () => {
+            signupModal.style.display = 'none';
+            signupForm.reset();
+            signupMessage.style.display = 'none';
+        });
+
+        signupForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+            const username = document.getElementById('username').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const ageCheck = document.getElementById('age-check').checked;
+
+            if (!ageCheck) {
+                signupMessage.style.display = 'block';
+                signupMessage.textContent = 'You must be 18 or older to sign up!';
+                signupMessage.style.color = '#ff1493';
+                return;
+            }
+
+            // Log to console (frontend-only)
+            console.log('Sign Up Data:', { username, email, password });
+            signupMessage.style.display = 'block';
+            signupMessage.textContent = `Welcome, ${username}! Your sign-up was successful!`;
+            signupForm.reset();
+            setTimeout(() => {
+                signupModal.style.display = 'none';
+                signupMessage.style.display = 'none';
+            }, 2000);
         });
 
         // Particle System
