--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rynix_AI</title>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
     <!-- Particle Canvas -->
@@ -201,6 +204,7 @@
             top: 0;
             z-index: 100;
             border-bottom: 2px solid #ff1493;
+            flex-wrap: wrap;
         }
 
         .logo {
@@ -226,13 +230,15 @@
         .nav-links {
             list-style: none;
             display: flex;
-            gap: 20px;
+            gap: 15px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         .nav-links li a {
             color: #fff;
             text-decoration: none;
-            font-size: 1.2rem;
+            font-size: 1rem;
             position: relative;
             transition: color 0.3s ease;
         }
@@ -269,6 +275,7 @@
             background: #333;
             color: #fff;
             outline: none;
+            width: 120px;
         }
 
         .search-bar button {
@@ -470,17 +477,22 @@
 
         @media (max-width: 768px) {
             nav {
-                flex-direction: column;
+                flex-wrap: wrap;
                 gap: 10px;
+                justify-content: center;
             }
 
             .nav-links {
-                flex-direction: column;
-                text-align: center;
+                flex-direction: row;
+                gap: 10px;
+            }
+
+            .nav-links li a {
+                font-size: 0.9rem;
             }
 
             .search-bar input {
-                width: 100%;
+                width: 100px;
             }
 
             #devil-face {
@@ -504,6 +516,31 @@
         link.href = 'https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap';
         link.rel = 'stylesheet';
         document.head.appendChild(link);
+
+        const firebaseConfig = {
+    apiKey: "AIzaSyB7rP1RxcZ_MDTj1hFHBmNCb8jI46q14ko",
+    authDomain: "rynix-ai.firebaseapp.com",
+    projectId: "rynix-ai",
+    storageBucket: "rynix-ai.firebasestorage.app",
+    messagingSenderId: "1067111709948",
+    appId: "1:1067111709948:web:b35160806e3e97c338eb79",
+    measurementId: "G-Y9WKLRCLF2"
+  };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+
+        // Simple Hash Function for Password (Client-side, for demo purposes)
+        function simpleHash(str) {
+            let hash = 0;
+            for (let i = 0; i < str.length; i++) {
+                const char = str.charCodeAt(i);
+                hash = ((hash << 5) - hash) + char;
+                hash = hash & hash;
+            }
+            return hash.toString(16);
+        }
 
         // Devil Face Entry
         const entryScreen = document.getElementById('entry-screen');
@@ -605,7 +642,7 @@
             signupMessage.style.display = 'none';
         });
 
-        signupForm.addEventListener('submit', (e) => {
+        signupForm.addEventListener('submit', async (e) => {
             e.preventDefault();
             const username = document.getElementById('username').value;
             const email = document.getElementById('email').value;
@@ -619,15 +656,30 @@
                 return;
             }
 
-            // Log to console (frontend-only)
-            console.log('Sign Up Data:', { username, email, password });
-            signupMessage.style.display = 'block';
-            signupMessage.textContent = `Welcome, ${username}! Your sign-up was successful!`;
-            signupForm.reset();
-            setTimeout(() => {
-                signupModal.style.display = 'none';
-                signupMessage.style.display = 'none';
-            }, 2000);
+            try {
+                // Hash password (basic, for demo)
+                const hashedPassword = simpleHash(password);
+                // Save to Firestore
+                await db.collection('users').add({
+                    username,
+                    email,
+                    password: hashedPassword,
+                    ageConfirmed: ageCheck,
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                });
+                signupMessage.style.display = 'block';
+                signupMessage.textContent = `Welcome, ${username}! Your sign-up was successful!`;
+                signupMessage.style.color = '#00ffff';
+                signupForm.reset();
+                setTimeout(() => {
+                    signupModal.style.display = 'none';
+                    signupMessage.style.display = 'none';
+                }, 2000);
+            } catch (error) {
+                signupMessage.style.display = 'block';
+                signupMessage.textContent = `Error: ${error.message}`;
+                signupMessage.style.color = '#ff1493';
+            }
         });
 
         // Particle System
